fixing nav overflow at mobile

--- a/css/index.css
+++ b/css/index.css
@@ -415,9 +415,9 @@
   }
   @media (max-width: 870px){
     .header-wrapper{
-      overflow: hidden;
+      position: relative;
     }
-    .header.isFixed{
+    .header{
       position: fixed;
     }
     .header__h1{
@@ -431,17 +431,17 @@
       transform: translateX(100%);
       transition: transform .5s ease;
       position: absolute;
-      height: 100vh;
       width: 100%;
+      height: 100vh;
       top: 0;
       left: 0;
       opacity: 0;
       background-color: var(--bg-c-primary);
-      overflow: hidden;
     }
     .header__nav.isActive{
       transform: translateX(0);
       opacity: 1;
+      pointer-events: all;
     }
     .header__ul{
         flex-flow: column nowrap;
@@ -450,6 +450,7 @@
         padding: 0 0 0 3.125rem;
         gap: 1.875rem;
         height: 100%;
+        width: 100%;
         text-transform: uppercase;
         font-family: var(--font-secondary);
         font-weight: 300;
